2005-08-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Font selection): add
	doco for make-pango-font-tree.

2005-07-31  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/music-glossary: more languages
	for tenuto.

	* Docuemntation/user/instrument-notation.itely: minor
	update for bagpipe example.

2005-07-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/+.ly (TODO): add some text.

2005-07-28  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/invoking.itely: \score begins with music.

	* Documentation/user/ basic-notation.itely,
	instrument-notation.itely: minor changes.

	* Documentation/user/music-glossary.itely: began tenuto entry.

2005-07-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-socket.scm (bezier-sandwich): add bezier-sandwich

	* mf/feta-bolletjes.mf: swap up and down for aiken heads.

2005-07-27  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/examples.itely: remove bagpipe template.

	* Documentation/user/instrument-notation.itely: add bagpipe
	section, maybe fix quotes in lyrics.  I hate text encoding.
	Clarify chord durations, more bagpipe stuff.

2005-07-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
	* lily/accidental-engraver.cc: formatting fixes.

	* lily/spacing-spanner.cc (prune_loose_columns): right-items is a
	grob-array.

	* lily/arpeggio.cc (print): suicide arpeggio for single notehead.

	* lily/note-column.cc (arpeggio): new function.

	* lily/note-spacing.cc (get_spacing): also take arpeggio into
	account for spacing.

2005-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (sane_setenv)[!ARGV0_RELOCATION]: Also define.
	(setup_guile_env): Use it instead of nonstandard setenv.  Fixes
	mingw build.
	
2005-07-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (lilypond-all): clear anonymous modules after
	processing files.

2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/guile-compatibility.hh (SCM_I_CONSP): add