@@ -54,7 +54,8 @@ ETAGS_FLAGS += --regex='{c++}/^LY_DEFINE *([^"]*"\([^"]+\)"/\1/'
 default:
 
 
-$(outdir)/libstdc++.a: 
+$(outdir)/libstdc++.a:
+	rm -f $@
 	ln -s `$(CXX) -print-file-name=libstdc++.a` $(outdir)/
 
 ifeq ($(LINK_GXX_STATICALLY),yes)
