@@ -21,5 +21,8 @@ inline bool ly_is_module (SCM x) { return SCM_MODULEP (x); }
 SCM ly_clear_anonymous_modules ();
 SCM ly_use_module (SCM mod, SCM used);
 
+/* Ugh signature of scm_internal_hash_fold () is inaccurate.  */
+typedef SCM (*Hash_closure_function) ();
+
 #endif /* LY_MODULE_HH */
 
