@@ -18,16 +18,10 @@
 Protected_scm anonymous_modules = SCM_EOL;
 #endif
 
-#define FUNC_NAME __FUNCTION__
 
-
-LY_DEFINE(ly_clear_anonymous_modules, "ly:clear-anonymous-modules",
-	  0, 0, 0, (),
-	  "Plug a GUILE 1.6 and 1.7 memory leak by breaking a weak reference "
-	  "pointer cycle explicitly."
-	  )
+void
+clear_anonymous_modules ()
 {
-#ifdef MODULE_GC_KLUDGE
   for (SCM s = anonymous_modules;
        scm_is_pair (s);
        s = scm_cdr (s))
@@ -44,9 +38,6 @@ LY_DEFINE(ly_clear_anonymous_modules, "ly:clear-anonymous-modules",
     }
 
   anonymous_modules = SCM_EOL;
-#endif
-
-  return SCM_UNSPECIFIED;
 }
 
 SCM
@@ -93,33 +84,7 @@ ly_use_module (SCM mod, SCM used)
 
 #define FUNC_NAME __FUNCTION__
 
-static SCM
-module_define_closure_func (void *closure, SCM key, SCM val, SCM result)
-{
-  (void) result;
-  SCM module = (SCM) closure;
-  if (scm_variable_bound_p (val) == SCM_BOOL_T)
-    scm_module_define (module, key, scm_variable_ref (val));
-  return SCM_EOL;
-}
 
-/* Ugh signature of scm_internal_hash_fold () is inaccurate.  */
-typedef SCM (*Hash_cl_func) ();
-
-/*
-  If a variable in changed in SRC, we DEST doesn't see the
-  definitions.
-*/
-LY_DEFINE (ly_module_copy, "ly:module-copy",
-	   2, 0, 0, (SCM dest, SCM src),
-	   "Copy all bindings from module SRC into DEST.")
-{
-  SCM_VALIDATE_MODULE (1, src);
-  scm_internal_hash_fold ((Hash_cl_func) & module_define_closure_func,
-			  (void *) dest,
-			  SCM_EOL, SCM_MODULE_OBARRAY (src));
-  return SCM_UNSPECIFIED;
-}
 
 static SCM
 accumulate_symbol (void *closure, SCM key, SCM val, SCM result)
@@ -135,7 +100,7 @@ ly_module_symbols (SCM mod)
   SCM_VALIDATE_MODULE (1, mod);
 
   SCM obarr = SCM_MODULE_OBARRAY (mod);
-  return scm_internal_hash_fold ((Hash_cl_func) & accumulate_symbol,
+  return scm_internal_hash_fold ((Hash_closure_function) & accumulate_symbol,
 				 NULL, SCM_EOL, obarr);
 }
 
@@ -156,40 +121,7 @@ LY_DEFINE (ly_module2alist, "ly:module->alist",
   SCM_VALIDATE_MODULE (1, mod);
   SCM obarr = SCM_MODULE_OBARRAY (mod);
 
-  return scm_internal_hash_fold ((Hash_cl_func) & entry_to_alist, NULL, SCM_EOL, obarr);
-}
-
-/* Lookup SYM, but don't give error when it is not defined.  */
-SCM
-ly_module_lookup (SCM module, SCM sym)
-{
-#define FUNC_NAME __FUNCTION__
-  SCM_VALIDATE_MODULE (1, module);
-
-  return scm_sym2var (sym, scm_module_lookup_closure (module), SCM_BOOL_F);
-#undef FUNC_NAME
-}
-
-/* Lookup SYM in a list of modules, which do not have to be related.
-   Return the first instance. */
-LY_DEFINE (ly_modules_lookup, "ly:modules-lookup",
-	   2, 1, 0,
-	   (SCM modules, SCM sym, SCM def),
-	   "Lookup @var{sym} in the list @var{modules}, "
-	   "returning the first occurence.  "
-	   "If not found, return @var{default}, or @code{#f}.")
-{
-  for (SCM s = modules; scm_is_pair (s); s = scm_cdr (s))
-    {
-      SCM mod = scm_car (s);
-      SCM v = ly_module_lookup (mod, sym);
-      if (SCM_VARIABLEP (v) && SCM_VARIABLE_REF (v) != SCM_UNDEFINED)
-	return scm_variable_ref (v);
-    }
-
-  if (def != SCM_UNDEFINED)
-    return def;
-  return SCM_BOOL_F;
+  return scm_internal_hash_fold ((Hash_closure_function) & entry_to_alist, NULL, SCM_EOL, obarr);
 }
 
 void
@@ -207,3 +139,35 @@ ly_reexport_module (SCM mod)
 {
   ly_export (mod, ly_module_symbols (mod));
 }
+
+
+
+#ifdef MODULE_GC_KLUDGE
+static SCM
+redefine_keyval (void *closure, SCM key, SCM val, SCM result)
+{
+  (void)closure;
+  SCM new_tab = result;
+  scm_hashq_set_x (new_tab, key, val);
+  return new_tab;
+}
+
+/*
+  UGH UGH.
+  Kludge for older GUILE 1.6 versions.
+ */
+void
+make_stand_in_procs_weak ()
+{
+  SCM old_tab = scm_stand_in_procs;
+  SCM new_tab = scm_make_weak_key_hash_table (scm_from_int (257));
+  
+  new_tab = scm_internal_hash_fold ((Hash_closure_function) & redefine_keyval,
+				    NULL,
+				    new_tab, old_tab);
+
+  scm_stand_in_procs = new_tab;
+}
+
+ADD_SCM_INIT_FUNC(make_stand_in_procs_weak, make_stand_in_procs_weak);
+#endif
